Fixed blog post preview border clipping

--- a/css/style.css
+++ b/css/style.css
@@ -158,10 +158,9 @@ li:hover
 {
 	border-style: inset;
 	border-width:5px;
-	width: 100%;
-	height: 11em;
+	width: 97%;
+	height: 16em;
 	word-break: break-all;
-	display: inline-block;
 	margin: 0;
 	margin-bottom: 8px;
 	padding: 0;
